kube/alrest/x/future-sight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: future-sight
  namespace: future-sight
  labels:
    xeiaso.net/role: web
spec:
  selector:
    xeiaso.net/role: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      name: web
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: api
  type: ClusterIP
